# ProyectoAstronomia

./: .gitignore  CONTRIBUTING.md  LICENSE  MULTIAGENT_DEV_SPEC_v0.1.md  README.md  inference_results.csv  setup.py  visualize_results.py
docs/: inference_report.md  paper_v0.2.tex  paper_v0.2_es.md  paper_v0.2_es.tex  user_guide_v0.2.md
orbitalskyshield/: README.md  __init__.py  pyproject.toml
orbitalskyshield/api/: pipeline.py
orbitalskyshield/cli/: main.py
orbitalskyshield/config/: default_config.yaml
orbitalskyshield/core/: fits_metadata.py  io_fits.py  logging.py  types.py
orbitalskyshield/datasets/synthetic/: generator.py
orbitalskyshield/metrics/: frame_metrics.py  night_metrics.py
orbitalskyshield/skyglow/: odc_estimator.py  physical_model.py
orbitalskyshield/streak_detection/: baseline_detector.py  improved_detector.py
orbitalskyshield/validation/: __init__.py  metrics.py
results/: validation_summary.md
results/validation_adaptive/: validation_report.json
results/validation_adaptive_95/: validation_report.json
results/validation_baseline/: validation_report.json
scripts/: analyze_inference.py  analyze_results.py  check_fits_header.py  optimize_images.py  run_fits_demo.py  run_full_inference.py  validate_detector.py  visualize_detections.py  visualize_evidence.py
